--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite\" \"tsx server/index.ts\"",
+    "dev": "concurrently \"vite\" \"tsx --watch server/index.ts\"",
     "dev:client": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
